--- a/WebContent/adminjsps/admin/css/book/add.css
+++ b/WebContent/adminjsps/admin/css/book/add.css
@@ -43,11 +43,11 @@ li {
 }
 
 .btn1 {
-	background: url(/bookstore/images/hong_2_btn.jpg) left top
+	background: url(/bms/images/hong_2_btn.jpg) left top
 		no-repeat;
 }
 
 .btn2 {
-	background: url(/bookstore/images/hong_1_btn.jpg) left top
+	background: url(/bms/images/hong_1_btn.jpg) left top
 		no-repeat;
 }
