--- a/WebContent/adminjsps/admin/css/order/desc.css
+++ b/WebContent/adminjsps/admin/css/order/desc.css
@@ -62,7 +62,7 @@ dt {
 
 .title {
 	border: 1px solid #d0d0d0;
-	background: url(/bookstore/images/bg_btns.png) repeat-x;
+	background: url(/bms/images/bg_btns.png) repeat-x;
 	background-position: 0 -132px;
 	margin-left: 2px;
 	height: 30px;
@@ -78,7 +78,7 @@ td .bookname {
 }
 
 .pay {
-	background: url(/bookstore/images/sprites_orderdetails.gif)
+	background: url(/bms/images/sprites_orderdetails.gif)
 		no-repeat;
 	display: inline-block;
 	background-position: 0 -200px;
@@ -109,7 +109,7 @@ a {
 }
 
 #confirm {
-	background: url(/bookstore/images/confirm.jpg) no-repeat;
+	background: url(/bms/images/confirm.jpg) no-repeat;
 	display: inline-block;
 	height: 34px;
 	width: 142px;
@@ -122,7 +122,7 @@ a {
 }
 
 #cancel {
-	background: url(/bookstore/images/huang_2_btn.jpg)
+	background: url(/bms/images/huang_2_btn.jpg)
 		no-repeat;
 	display: inline-block;
 	height: 34px;
@@ -137,7 +137,7 @@ a {
 }
 
 #cancel:hover {
-	background: url(/bookstore/images/huang_1_btn.jpg)
+	background: url(/bms/images/huang_1_btn.jpg)
 		no-repeat;
 	display: inline-block;
 	height: 34px;
@@ -151,7 +151,7 @@ a {
 }
 
 #deliver {
-	background: url(/bookstore/images/hong_2_btn.jpg) no-repeat;
+	background: url(/bms/images/hong_2_btn.jpg) no-repeat;
 	display: inline-block;
 	height: 34px;
 	width: 142px;
@@ -165,7 +165,7 @@ a {
 }
 
 #deliver:hover {
-	background: url(/bookstore/images/hong_1_btn.jpg) no-repeat;
+	background: url(/bms/images/hong_1_btn.jpg) no-repeat;
 	display: inline-block;
 	height: 34px;
 	width: 142px;
