--- a/WebContent/adminjsps/admin/css/order/list.css
+++ b/WebContent/adminjsps/admin/css/order/list.css
@@ -22,7 +22,7 @@ body {
 
 .title {
 	border: 1px solid #d0d0d0;
-	background: url(/bookstore/images/bg_btns.png) repeat-x;
+	background: url(/bms/images/bg_btns.png) repeat-x;
 	background-position: 0 -132px;
 	margin-left: 2px;
 	height: 30px;
