--- a/WebContent/jsps/css/order/desc.css
+++ b/WebContent/jsps/css/order/desc.css
@@ -63,7 +63,7 @@ dt {
 
 .title {
 	border: 1px solid #d0d0d0;
-	background: url(/bookstore/images/bg_btns.png) repeat-x;
+	background: url(/bms/images/bg_btns.png) repeat-x;
 	background-position: 0 -132px;
 	margin-left: 2px;
 	height: 30px;
@@ -79,7 +79,7 @@ td .bookname {
 }
 
 .pay {
-	background: url(/bookstore/images/sprites_orderdetails.gif)
+	background: url(/bms/images/sprites_orderdetails.gif)
 		no-repeat;
 	display: inline-block;
 	background-position: 0 -200px;
@@ -110,7 +110,7 @@ a {
 }
 
 #confirm {
-	background: url(/bookstore/images/confirm.jpg) no-repeat;
+	background: url(/bms/images/confirm.jpg) no-repeat;
 	display: inline-block;
 	height: 34px;
 	width: 142px;
@@ -123,7 +123,7 @@ a {
 }
 
 #cancel {
-	background: url(/bookstore/images/hei_1_btn.jpg) no-repeat;
+	background: url(/bms/images/hei_1_btn.jpg) no-repeat;
 	display: inline-block;
 	height: 34px;
 	width: 142px;
