--- a/WebContent/jsps/css/order/pay.css
+++ b/WebContent/jsps/css/order/pay.css
@@ -54,7 +54,7 @@ img {
 }
 
 .linkNext {
-	background: url(/bookstore/images/icon2.png) no-repeat;
+	background: url(/bms/images/icon2.png) no-repeat;
 	display: inline-block;
 	background-position: 0 -35px;
 	height: 40px;
@@ -70,7 +70,7 @@ img {
 }
 
 .linkNext:HOVER {
-	background: url(/bookstore/images/icon2.png) no-repeat;
+	background: url(/bms/images/icon2.png) no-repeat;
 	display: inline-block;
 	background-position: 0 -75px;
 	height: 40px;
